--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         classpath 'org.shipkit:shipkit:2.3.1'
         classpath 'com.gradle:build-scan-plugin:1.16'
         classpath 'ru.vyarus:gradle-animalsniffer-plugin:1.4.6'
+        classpath "com.gradle.publish:plugin-publish-plugin:0.12.0"
     }
 }
 
